--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "json-server": "^0.15.0"
   }
 }
